# AutoMasterGraphQLAPI

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docker/: entrypoint.sh
main/: backends.py  schema.py  urls.py
main/settings/: common.py  local-docker.py  local.py  prod.py  stage.py  test.py
masters/: admin.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
masters/migrations/: 0001_initial.py  0002_alter_master_avatar.py  0003_alter_master_avatar.py
registers/: admin.py  exceptions.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
registers/migrations/: 0001_initial.py  0002_auto_20220206_1259.py  0003_alter_register_end_at.py  0004_alter_register_end_at.py  0005_alter_register_end_at.py
tests/: data.json  services.py
tokens/: authentication.py  models.py  serializers.py  tests.py  tokens.py  urls.py  views.py
tokens/migrations/: 0001_initial.py
users/: exceptions.py  models.py  schema.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_auto_20220205_1413.py  0003_alter_user_middle_name.py
utils/: helper.py  random.py
